[Spring 장바구니 - 2단계] 아리(양유림) 미션 제출합니다. (#104)
* refactor(schema.sql): 이름 중복 허용

* feat: 상품이 존재하지 않는 경우 예외 발생기능 추가

* test(ProductAcceptanceTest): 인수테스트에 RestAssuredConvenienceMethod를 이용하도록 수정

* refactor: 불필요한 파일 삭제

* refactor: 기본으로 제공되는 제품 작성

* refactor: 존재하지 않는 회원의 예외 발생지 변경 ( service -> dao )

* refactor: product 관련 리팩토링

* test: member 관련 테스트코드 간소화

* refactor: 장바구니 관련 코드 리팩토링

* refactor: 주문 관련 리팩토링

* fix: 누락된 상품 단일 조회 예외 해결

* feat: 기본제공제품 추가

* refactor : Long -> long

* refactor : 불필요한 상품 id 반환기능 제거

* feat: 이미 장바구니에 존재하는 상품이라면 수량만 추가하는 기능 구현

* test(CartServiceTest): CartService 테스트코드 추가

* refactor(Cart): 총액 명명규칙 변경

* refactor(CartService): 제품 id 명명규칙 변경

* feat(build.gradle): mysql 의존성 추가

* fix : 잘못된 테이블명 수정

* docs(README): api 문서 링크 수정

* refactor: 주문관련기능 토큰 적용

* refactor(ControllerAdvice): 예외처리 로직 통일화

* refactor(MemberDao): 사용하지 않는 메서드 삭제 및 메서드 네이밍 수정(find->get)

* refactor(Dao): 데이터가 존재함이 보장되는 경우 메서드 네이밍에 get 이용

* style : 불필요한 변수 및 공백 제거

* refactor : 데이터를 조회만 하는 경우 @Transactional(readOnly = true) 추가

* style : 의미를 보다 명확히 담도록 메서드명 수정

* style : 메서드명 통일화

* fix : 잘못된 제약사항 수정 및 테스트코드 추가

* test : 토큰이 없는 경우의 테스트 추가

* test(CartServiceTest) : 정상작동 테스트 추가

* style : 더 명확한 메서드명으로 수정

* test : 엣지케이스 추가